public/assets/css/style.css
/* ... */
/* ==================
Nav tabs theme style
====================*/

.nav-tabs-theme .nav-tabs {
    border-bottom: 0;
    margin-bottom: 1.25rem;
}

.nav-tabs-theme .nav-tabs .nav-item {
    border: 1px solid #53B848;
    background: #FFF;
    color: #53B848;
    border-radius: 22px;
    text-align: center;
    width: calc(50% + 17.5px);
    z-index: 0;
}

.nav-tabs-theme .nav-tabs .nav-item:nth-child(2) {
    margin-left: -35px;
}
/*.nav-tabs-theme .nav-tabs .nav-item:first-child.active,
.nav-tabs-theme .nav-tabs .nav-item:first-child:active {
border-top-right-radius: 0;
border-bottom-right-radius: 0;
}*/

.nav-tabs-theme .btn-success:not(:disabled):not(.disabled).active:focus,
.nav-tabs-theme.btn-success:not(:disabled):not(.disabled):active:focus,
.nav-tabs-theme .show>.btn-success.dropdown-toggle:focus {
    box-shadow: none;
}

.nav-tabs-theme .btn-success:not(:disabled):not(.disabled).active,
.nav-tabs-theme .btn-success:not(:disabled):not(.disabled):active,
.nav-tabs-theme .show>.btn-success.dropdown-toggle .nav-tabs-theme .nav-tabs .nav-item.active.show {
    background-color: #53B848;
    border: 1px solid #53B848;
    border-radius: 22px;
    color: #FFF;
    z-index: 1;
}
/* ===================
Dialog theme style
=====================*/

.dialog-theme {
    border: 1px solid #53B848;
    border-radius: 10px;
    width: 100%;
    z-index: 999;
}

.heading-dialog-theme {
    color: #53B848;
    margin-bottom: 20px;
}

.dialog-theme .form-theme .form-control {
    font-size: 20px;
    height: 44px;
    padding: 10px 15px;
    margin-bottom: 5px;
}
/* ===================
Card theme style
=====================*/

.card-theme {
    border: 0;
    box-shadow: 0px 0px 4px rgba(83, 184, 72, 0.4);
}

.card-theme .card-header {
    background: rgba(83, 184, 72, 1);
    color: #FFFFFF;
}
/* ==============
Tab-content Query 
===============*/
.table-theme-2nd-section label, table-theme-2nd-section .table-theme-2nd .dataTables_info, table-theme-2nd-section .table-theme-2nd .paginate_button,
.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate,
.dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
    color: #969696 !important;
}

.table-theme-2nd {
    border-spacing: 0 2rem !important;
    border-collapse: separate;
}

.table-theme-2nd.table td, .table-theme-2nd.table th {
    border: 0;
}

.table-theme-2nd.table th {
    background-color: #E6E6E8;
}

.table-theme-2nd.table td {
    background-color: #F9F9FA;
}

.table-theme-2nd.table tbody tr td:first-child{
    border-left: 3px solid #53B848;
}
.table-theme-2nd-section table.dataTable.no-footer {
    border-bottom: 0;
}
/* ==============
Media Query 
===============*/

@media (min-width: 768px) {
    .mb-md-100 {
        margin-bottom: 100px !important;
    }
}

@media only screen and (max-width: 1024px) {
    body,
    .register-section {
        font-size: 16px;
    }
    .register-section .logo {
        margin-bottom: 50px;
    }
    .section-title {
        font-size: 40px;
    }
}

@media only screen and (max-width: 991px) {
    .section-theme {
        padding: 50px 0;
    }
    .section-title {
        font-size: 30px;
    }
    .register-section {
        background-size: 50% 100%;
    }
}

@media only screen and (min-width: 769px) and (max-width: 991px) {
    .register-section {
        background-size: 54% 100%;
        padding: 50px 0 50px;
    }
}

@media only screen and (max-width: 767px) {
    .section-theme {
        padding: 40px 0;
    }
    .register-section {
        background: none;
        height: auto;
        min-height: 300px;
        padding: 50px 0 30px;
    }
    .register-section .logo {
        margin-bottom: 30px;
    }
    .register-section .section-title {
        padding-bottom: 15px;
    }
    .section-title {
        margin-bottom: 30px;
    }
    .register-info-device {
        background: url(../img/bg-img-register.svg);
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center top;
    }
    .register-section.register-info-device {
        padding: 25px 0 50px;
    }
    .section-title span {
        border-bottom: 3px solid;
        padding-bottom: 12px;
    }
}

@media only screen and (max-width: 575px) {
    body {
        font-size: 14px;
    }
    .section-theme {
        padding: 30px 0;
    }
    .section-footer {
        background-position: center bottom;
        background-size: cover;
        text-align: center;
    }
    footer {
        text-align: center;
    }
    #footer {
        text-align: center;
    }
    .nav-tabs-theme .nav-tabs .nav-item {
        padding: 10px 58px;
    }
}

p.div-danger,
.alert-danger {
    background-color: #f0d174;
    width: 100%;
    text-align: center;
}

p.div-success,
.alert-success {
    background-color: #89c07d;
    width: 100%;
    text-align: center;
}

p.balance-show {
    padding-left: 2%;
}

a.tableLink {
    text-decoration: underline;
    color: #53B848
}
.message-view{
    width: 100%;
}
.message-view .alert{
    display: none;
}
.message-view .show{
    display: block;
}
/*.register-section .footer-menu span.dot {
padding: 0 35px
}*/
/*.content-wrapper {
background: #FFFFFF;
box-shadow: 0px 0px 5px rgba(125, 125, 125, 0.4);
border-radius: 23px;
padding: 20px;
margin-top: 36px;

}*/
/*@media (min-width: 992px) {
.content-wrapper {
padding: 80px;
}

}
@media (min-width: 1380px) {
.content-wrapper {
margin-top: 126px;
}

}
.text-center{
text-align: center;
}
.hide{
display: none;
}
.address-block{
padding: 12px;
background: whitesmoke;
border-radius: 4px;
margin: 5px auto;
}
.address-block p{
padding: 0;
margin: 0;
overflow-wrap: break-word;
}*/
/* ... */

